# EdgeHunter

./: .env.example  .env.server  .gitignore  =0.25.0  ADRS_CONSOLIDATED.md  FREEZE.md  FREEZE_REPORT.md  LIVE-CLEANUP-OLD-BOT-REPORT.md  PRDS_CONSOLIDATED.md  README.md  audit_db.py  claude_engine.py  container_migrate.py  docker-compose.yml  edgehunter.service  fix_tests.py  poll_deploy.sh  pyproject.toml  remote_migrate.py  remote_test.py  sportsdb_past.json  start.bat  update_env.py
.bmad/: config.json
.bmad-method/: language-config.md
.claude/: settings.local.json
_bmad/: config.toml  config.user.toml
backend/: .dockerignore  Dockerfile  apifootball_usage.json  async_radar.py  async_worker.py  bookies.json  clv_worker.py  create_tables.py  database.py  debug_links.py  debug_links_v3.py  debug_scraper.py  debug_scraper_v2.py  find_pinnacle_tennis_leagues.py  force_fetch.py  force_scheduler.py  live_test_scraper.py  matches.json  oddsapiio_usage.json  proxy_rotator.py  rapidapi_usage.json  requirements.txt  run.py  seed_historical.py  steam_crawler.py  test_apifootball.py  test_h2h_link.py  test_new_rapidapi.py  test_oddsio.py  test_oddsportal.py  test_pinnacle_plural.py  test_rapidapi.py
deploy/: README_SERVER.md
docs/: BACKUP_RESTORE.md  CLEAN_INSTALL_TEST.md  LIVE_CONTROLLED_TEST.md  LOCAL_DEPLOYMENT.md  OPERATIONS_MANUAL.md  POST_RELEASE_V2_REPORT.md  PROJECT_STATUS.md  RELEASE_CHECKLIST.md  RELEASE_HISTORY.md  ROADMAP_OPTIONAL.md  _index_config.yaml
frontend/: package-lock.json  package.json
scripts/: apply_migrations.py  audit_bookies.py  init_db.py  (+19 more)
(+311 files in other folders)
