[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgehunter"
version = "0.7.0"
description = "EdgeHunter Platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dateutil",
    "pytz"
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest"
]
